--- a/roles/server/templates/apache.conf.j2
+++ b/roles/server/templates/apache.conf.j2
@@ -1,11 +1,14 @@
 <VirtualHost *:80>
-    ServerAdmin webmaster@localhost
-    DocumentRoot {{ app_directory }}
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+    ServerAdmin admin@example.com
+    ServerName {{ inventory_hostname }}
+    DocumentRoot {{ app_path }}/public
 
-    <Directory "{{ app_directory }}">
+    <Directory {{ app_path }}/public>
+        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
